--- a/index.html
+++ b/index.html
@@ -18,11 +18,17 @@
     padding: 10px;
   }
 
+  .container {
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+  }
+
   h2 {
     color:#ff4d94;
     font-size:1.5rem;
     text-align:center;
-    margin-bottom:20px;
+    margin-bottom:20px; /* space between instruction and envelope */
     transition:opacity 0.5s ease;
   }
 
@@ -69,7 +75,7 @@
 
   .letter {
     position:absolute;
-    bottom:-220px; /* hidden initially */
+    bottom:-220px;
     left:50%;
     transform:translateX(-50%) scale(0.5);
     width:80vw;
@@ -121,15 +127,16 @@
 </head>
 <body>
 
-<h2 id="instruction">Click the heart to open 💌</h2>
-
-<div class="envelope-container">
-  <div class="envelope" id="envelope">
-    <div class="flap"></div>
-  </div>
-  <div class="sticker" id="sticker"></div>
-  <div class="letter" id="letter">
-  ❤️ Hi love, I just want to say thank you for all the beautiful moments we shared. Please know that you will always have a special place in my heart. I will cherish our memories forever and wish you nothing but happiness. Take care and keep smiling. I love you. ❤️
+<div class="container">
+  <h2 id="instruction">Click the heart to open 💌</h2>
+  <div class="envelope-container">
+    <div class="envelope" id="envelope">
+      <div class="flap"></div>
+    </div>
+    <div class="sticker" id="sticker"></div>
+    <div class="letter" id="letter">
+      ❤️ Hi love, I just want to say thank you for all the beautiful moments we shared. Please know that you will always have a special place in my heart. I will cherish our memories forever and wish you nothing but happiness. Take care and keep smiling. I love you. ❤️
+    </div>
   </div>
 </div>
 
