--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
 <style>
   * { margin:0; padding:0; box-sizing:border-box; }
 
-  body {
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    height:100vh;
-    background:#ffe6f0;
-    font-family:Arial, sans-serif;
-    overflow:hidden;
-    padding: 10px;
-  }
+body {
+  display:flex;
+  justify-content:center;
+  align-items:flex-start; /* align to top instead of center */
+  min-height:100vh;       /* allow content to grow */
+  background:#ffe6f0;
+  font-family:Arial, sans-serif;
+  padding:20px 10px;      /* give some spacing from top */
+  overflow-x:hidden;
+}
+.container {
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+}
 
-  .container {
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-  }
 
   h2 {
     color:#ff4d94;
